# skype4pidgin

./: CHANGELOG.txt  Downloads.md  Info.plist  Makefile  ProjectHome.md  PurpleSkypeAccount.m  PurpleSkypeAccountViewController.h  PurpleSkypeService.m  README.md  README.txt  SkypeJoinChatViewController.m  SkypePlugin.h  SkypePlugin.m  SkypePlugin_Prefix.pch  TODO.txt  debug.c  libskype.c  skype4pidgin.nsi  skype_events.c  skype_messaging.c  skype_messaging_carbon.c  skype_messaging_carbon2.c  skype_messaging_dbus.c  skype_messaging_network.c  skype_messaging_win32.c  skype_messaging_x11.c  theme
PurpleSkypeAccountView.nib/: classes.nib
SkypeJoinChatView.nib/: keyedobjects.nib
SkypePlugin.xcodeproj/: mymacspace.mode1v3  mymacspace.pbxuser
libskypekit/: libskypekit.cpp  libskypekit.h
po/: de.po  en_AU.po  es.po  fr.po  hu.po  it.po  ja.po  nb.po  pl.po  pt.po  pt_BR.po  ru.po  skype4pidgin.pot
skypeweb/: .gitignore  CMakeLists.txt  Makefile  Makefile.eion  Makefile.msys2  README.md  glibcompat.h  libskypeweb.c  libskypeweb.h  pidgin-skypeweb.nsi  purple-skypeweb.spec  purplecompat.h  skypeweb_connection.c  skypeweb_connection.h  skypeweb_contacts.c  skypeweb_contacts.h  skypeweb_login.c  skypeweb_login.h  skypeweb_messages.c  skypeweb_messages.h  skypeweb_util.c  skypeweb_util.h  theme
skypeweb/purple2compat/: circularbuffer.h  glibcompat.h  http.c  image-store.h  image.h  internal.h  purple-socket.c  xfer.h
skypeweb/purple2compat/ciphers/: sha256hash.h
skypeweb/setup/: Readme.txt  makensi.cmd  setup.nsi
trunk/: CHANGELOG.txt  Info.plist  Makefile  PurpleSkypeAccount.h  PurpleSkypeAccount.m  PurpleSkypeAccountViewController.m  PurpleSkypeService.h  PurpleSkypeService.m  README.txt  SkypeJoinChatViewController.h  TODO.txt  debug.c  libskype.c  skype4pidgin.nsi  skype_events.c  skype_messaging.c  skype_messaging_carbon.c  skype_messaging_carbon2.c  skype_messaging_dbus.c  skype_messaging_network.c  skype_messaging_win32.c  skype_messaging_x11.c  theme
trunk/PurpleSkypeAccountView.nib/: info.nib  keyedobjects.nib
trunk/SkypeJoinChatView.nib/: classes.nib
trunk/SkypePlugin.xcodeproj/: mymacspace.mode1  project.pbxproj
trunk/po/: cs.po  en_AU.po  fr.po  hu.po  it.po  ja.po  mk.po  nb.po  pl.po  skype4pidgin.pot
trunk/skypeweb/: CMakeLists.txt  Makefile  Makefile.eion  gpl3.txt  libskypeweb.c  libskypeweb.h  skypeweb_connection.c  skypeweb_connection.h  skypeweb_contacts.c  skypeweb_contacts.h  skypeweb_login.c  skypeweb_login.h  skypeweb_messages.c  skypeweb_messages.h  skypeweb_util.c  (+1 more)
wiki/: Downloads.wiki
